--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans&display=swap');
+
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Inria Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   background-color: #b28b5a;
   color: #1a1a1a;
   text-align: center;
